<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Part of Phonk http://www.phonk.io
  ~ A prototyping platform for Android devices
  ~
  ~ Copyright (C) 2013 - 2017 Victor Diaz Barrales @victordiaz (Protocoder)
  ~ Copyright (C) 2017 - Victor Diaz Barrales @victordiaz (Phonk)
  ~
  ~ Phonk is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Phonk is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Phonk. If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_new"
        android:icon="@drawable/ic_note_add_white_24dp"
        app:showAsAction="never"
        android:title="@string/menu_label_new">
    </item>
    <item
        android:id="@+id/menu_help"
        android:icon="@drawable/ic_help_white_24dp"
        app:showAsAction="never"
        android:title="@string/menu_label_help">
    </item>
    <!--<item-->
        <!--android:id="@+id/menu_start_stop"-->
        <!--android:showAsAction="never"-->
        <!--android:title="@string/menu_label_stop_server">-->
    <!--</item>-->
    <item
        android:id="@+id/menu_settings"
        app:showAsAction="never"
        android:title="@string/menu_label_settings">
    </item>
</menu>