<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Part of Phonk http://www.phonk.io
  ~ A prototyping platform for Android devices
  ~
  ~ Copyright (C) 2013 - 2017 Victor Diaz Barrales @victordiaz (Protocoder)
  ~ Copyright (C) 2017 - Victor Diaz Barrales @victordiaz (Phonk)
  ~
  ~ Phonk is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Phonk is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Phonk. If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar2"
      android:layout_alignParentRight="true"
      android:layout_alignParentTop="true"
      android:layout_height="wrap_content"
      android:layout_width="match_parent">
    </include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar2"
        android:background="@color/transparent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="vertical" >

            <!--<ImageView-->
                <!--android:layout_width="120dp"-->
                <!--android:layout_height="120dp"-->
                <!--android:layout_marginBottom="16dp"-->
                <!--android:layout_marginLeft="16dp"-->
                <!--android:layout_marginRight="16dp"-->
                <!--android:layout_marginTop="25dp"-->
                <!--android:gravity="center"-->
                <!--android:src="@drawable/protocoder_help" />-->




            <TextView
                android:id="@+id/help_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/about_how_to_title"
                android:textColor="@color/phonk_colorPrimary"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/help_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:shadowColor="#ffffff"
                android:shadowDx="2"
                android:shadowDy="2"
                android:text="@string/about_how_to_contents"
                android:textColor="@color/phonk_colorPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/about_credits_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/about_credits"
                android:textColor="@color/phonk_colorPrimary"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/about_special_thanks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:shadowColor="#ffffff"
                android:shadowDx="2"
                android:shadowDy="2"
                android:text="@string/about_special_thanks"
                android:textColor="@color/phonk_colorPrimary"
                android:textSize="18sp" />


        </LinearLayout>

    </ScrollView>
</RelativeLayout>
